Fixed issue where Layout Content would not appear on iOS

--- a/frontend/src/components/Layout/Layout.module.css
+++ b/frontend/src/components/Layout/Layout.module.css
@@ -18,6 +18,13 @@
   flex: 1 1 auto;
   position: relative;
   overflow: hidden; /* This is actually required to work with optional <Scrollable /> child */
+  
+  /**
+  * This fixes an issue where content would appear invisible on iOS
+  * Fix: 100% height doesn't work within a flex item in a flex-item child (Chrome / Safari)
+  * @see https://github.com/philipwalton/flexbugs/issues/197#issuecomment-378908438 
+  */
+  height: 0px;
 }
 
 .footer {
